<resources>
    <string name="app_name">Dehari Provider</string>
    <string name="continueWithMobileNumber">Continue with Mobile Number</string>
    <string name="continueWithFacebook">Continue With Facebook</string>
    <string name="englishText">English</string>
    <string name="urduText">اردو</string>
    <string name="verticalDash">|</string>
    <string name="enterPhoneNumber">Enter Phone Number</string>
    <string name="continueText">Continue</string>
    <string name="phoneNumberHint">e.g 030012345678</string>
    <string name="enterPassword">Enter Password</string>
    <string name="newAccount">Welcome To Dehari</string>
    <string name="newAccountDesc">You are new to Dehari, please get registered to get our services and offers</string>
    <string name="createNewAccountButton">Create New Account</string>
    <string name="createAccount">Create Account</string>
    <string name="chooseAPicture">Choose A Picture</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="inValidPhoneNumber">Please Enter Valid Phone Number</string>
    <string name="update">Update</string>
    <string name="newPassword">Enter New Password</string>
    <string name="currentPassword">Enter Current Password</string>
    <string name="enterNewPassword">Enter New Password</string>
    <string name="newPasswordSec">New Password</string>
    <string name="confirmPasswordDesc">confirm Password</string>
    <string name="updatePassword">Update Password</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">177450289644217</string>
    <string name="fb_login_protocol_scheme">fb177450289644217</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="moreText">More</string>
    <string name="topRatedWorkers">Top Rated Workers</string>
    <string name="Notification">Notification</string>
    <string name="Settings">Setting</string>
    <string name="logout">Logout</string>
    <string name="termsAndConditions">Terms and Conditions</string>
    <string name="appVerion">1.0.0</string>
    <string name="appVersiontext">App Version</string>
    <string name="about">About</string>
    <string name="rateApp">Rate the App</string>
    <string name="language">Language</string>
    <string name="general">General</string>
    <string name="changePassword">Change Password</string>
    <string name="emailWoAddress">Email</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="profile">Profile</string>
    <string name="enterNewPasswordDesc">Enter your new password, to update old password</string>
    <string name="myReviews">My Reviews</string>
    <string name="hireNow">Hire Now</string>
    <string name="Jobs">Jobs</string>
    <string name="title_activity_jobs">JobsActivity</string>
    <string name="jobsOngoing">Ongoing</string>
    <string name="jobsHistory">History</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="notifications_admin_channel_name">abc</string>
    <string name="notifications_admin_channel_description">dsa</string>
    <string name="Accept">Accept</string>
    <string name="decline">Decline</string>
</resources>
