<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nfg.devlot.dehariprovider.Activity.WelcomeNewUserActivity"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_back"
            android:clickable="true"
            android:id="@+id/backButton_newUser_xml"
            android:layout_margin="20dp"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toplayout_newUser_xml"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/newAccount"
                android:textColor="#ffffff"
                android:textSize="22dp"
                android:id="@+id/description_textView_newUser_xml"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newAccountDesc"
                android:layout_margin="20dp"
                android:layout_below="@id/description_textView_newUser_xml"
                android:id="@+id/belowDescription_textView_newUser_xml"
                android:textColor="#ffffff"
                android:textSize="15dp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="5dp" />

        </RelativeLayout>




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/continueButton_newUser_xml"
                android:text="@string/createNewAccountButton"
                android:background="@drawable/filled_btn"
                android:layout_margin="20dp"
                android:textColor="#ffffff"
                />
            <TextView
                android:id="@+id/or_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:textColor="#ffffff"
                android:layout_below="@id/continueButton_newUser_xml"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/continueWithFaceBook_newUser_xml"
                android:layout_below="@id/or_tv"
                android:text="@string/continueWithFacebook"
                android:textColor="#ffffff"
                android:layout_centerHorizontal="true"
                android:layout_margin="12dp"/>

        </RelativeLayout>



    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
