<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nfg.devlot.dehariprovider.Activity.NewUserSignUpActivity"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toplayout_forgotPassword_xml"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createAccount"
            android:textSize="22dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/description_textView_enterPhone_xml"
            android:textColor="#ffffff" />

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/default_placeholder_image"
            android:id="@+id/profilePicture_userSignUp_xml"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorPrimaryDark"
            android:layout_below="@+id/description_textView_enterPhone_xml"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profilePicture_userSignUp_xml"
            android:text="@string/chooseAPicture"
            android:textColor="#ffffff"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/choosePicture_textView_userSignUp_xml"/>

        <!-- NAME -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:id="@+id/name_textView_userSignUp_xml"
            android:layout_below="@+id/choosePicture_textView_userSignUp_xml">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/name"
                android:textSize="15dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:gravity="center"
                android:id="@+id/name_editText_userSignUp_xml"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <!-- EMAIL -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:layout_below="@+id/name_textView_userSignUp_xml"
            android:id="@+id/email_textView_userSignUp_xml">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15dp"
                android:hint="@string/email"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:gravity="center"
                android:id="@+id/email_editText_userSignUp_xml"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>



        <!-- PASSWORD -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:layout_below="@+id/email_textView_userSignUp_xml"
            android:id="@+id/password_textView_userSignUp_xml">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:textSize="15dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:gravity="center"
                android:id="@+id/password_editText_userSignUp_xml"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmPassword"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:id="@+id/confirmPassword_textView_userSignUp_xml"
            android:layout_below="@+id/password_textView_userSignUp_xml">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15dp"
                android:hint="@string/confirmPassword"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:gravity="center"
                android:id="@+id/confirmPassword_editText_userSignUp_xml"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continueText"
            android:id="@+id/continue_button_userSignUp_xml"
            android:background="@drawable/filled_btn"
            android:layout_margin="20dp"
            android:textColor="#ffffff" />

    </RelativeLayout>

   <!-- <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progressBar_forgotPassword_xml"/>
-->
</RelativeLayout>
