<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nfg.devlot.dehariprovider.Activity.ForgotPasswordActivity"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:id="@+id/backgroundImage_ImageView_enterPhone_xml" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_back"
            android:clickable="true"
            android:id="@+id/backButton_changePassword_xml"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toplayout_changePassword_xml"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/enterNewPassword"
                android:textSize="22dp"
                android:textColor="#ffffff"
                android:id="@+id/description_textView_changePassword_xml"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/toplayout_changePassword_xml">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/newPassword_textView_forgotPassword_xml"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/newPasswordSec"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                android:layout_centerHorizontal="true">


                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/belowDescription_textView_changePassword_xml"
                    android:hint="@string/newPasswordSec"
                    android:textColor="#ffffff"
                    android:id="@+id/newPassword_editText_forgotPassword_xml"
                    android:inputType="textPassword"
                    android:textColorHint="#ffffff"
                    android:textSize="15dp"
                    android:background="@drawable/edit_text_border_sec"/>

            </android.support.design.widget.TextInputLayout>

            <!-- 2nd -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirmPassword_textView_forgotPassword_xml"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:hint="@string/confirmPasswordDesc"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/newPassword_textView_forgotPassword_xml">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/belowDescription_textView_changePassword_xml"
                    android:hint="@string/confirmPasswordDesc"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:id="@+id/confirmPassword_editText_forgotPassword_xml"
                    android:inputType="textPassword"
                    android:textSize="15dp"
                    android:background="@drawable/edit_text_border_sec"/>

            </android.support.design.widget.TextInputLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/filled_btn2"
                android:id="@+id/update_button_changePassword_xml"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:text="@string/updatePassword"
                android:textColor="#ffffff"/>

            <ProgressBar
                android:id="@+id/progressBar_changedPassword_xml"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignTop="@id/update_button_changePassword_xml"
                android:layout_centerHorizontal="true"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:translationZ="3dp" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
